Fixed up layout of sponsors on smaller screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,10 +35,17 @@ body {
     height: 300px;
 }
 
+#major-sponsors {
+    margin-top: -50px;
+    margin-left: 50px;
+    width: 800px;
+}
+
 #minor-sponsors {
     margin-left: auto;
     margin-right: auto;
     width: 800px;
+    margin-bottom:20px;
 }
 
 #minor-sponsors .sponsor-image {
@@ -555,6 +562,30 @@ div.checkbox-container {
 	font-size: xx-large;
 }
 
+@media(max-width: 991px) {
+    #major-sponsors {
+        width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+    }
+
+    #major-sponsors .sponsor-image {
+        height: 200px;
+    }
+
+    .sponsor-image.mandrill {
+        background-size: 400px;
+    }
+
+    #minor-sponsors {
+        margin-left: auto;
+        margin-right: auto;
+        width: 400px;
+    }
+
+}
+
 @media(max-width: 767px) {
     .about {
         padding-left: 20px;
@@ -572,6 +603,31 @@ div.checkbox-container {
 }
 
 @media(max-width: 400px) {
+    #major-sponsors {
+        width: 100%;
+        margin-top: 0;
+    }
+
+    #major-sponsors .sponsor-image {
+        height: 200px;
+        width: 100%;
+    }
+
+    .sponsor-image.mandrill {
+        background-size: auto;
+    }
+
+    #minor-sponsors {
+        width: 150px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #minor-sponsors .sponsor-image {
+        width: 100%;
+        margin: 0;
+    }
+
     #msform {
         width: auto;
     }
